[package]
name = "veecle-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Veecle OS Orchestrator"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["default", "derive", "env"] }
eyre = { workspace = true }
futures = { workspace = true, features = ["async-await", "std"] }
iceoryx2 = { version = "0.7.0", default-features = false }
libc = { workspace = true }
nix = { workspace = true, features = ["signal"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "std"] }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "std",
] }
veecle-ipc-protocol = { workspace = true, features = ["iceoryx2", "jsonl"] }
veecle-net-utils = { path = "../veecle-net-utils", version = "0.1.0", default-features = false, features = [
  "tokio",
] }
veecle-orchestrator-protocol = { workspace = true }
veecle-telemetry = { workspace = true, features = ["alloc", "std"] }

[lints]
workspace = true
