[package]
description = "The Veecle OS command line tool"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "veecle-os-cli"
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata]
# This crate will never involve any unsafe code.
workspace-checks.miri = false

[lints]
workspace = true

[[bin]]
name = "veecle-os"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"] }
veecle-os-data-support-can-cli = { workspace = true }
