[package]
description = "CAN features for Veecle OS' CLI"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "veecle-os-data-support-can-cli"
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata]
# This crate will never involve any unsafe code.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true

default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
patharg = { workspace = true }
shlex = { workspace = true, features = ["std"] }
syn = { workspace = true }
veecle-os-data-support-can-codegen = { workspace = true }
