[package]
name = "veecle-os-data-support-can-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for `veecle-os-data-support-can`"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# Miri cannot test proc-macros.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lib]
proc-macro = true

[dependencies]
camino = { workspace = true }
fs-err = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["visit-mut"] }
veecle-os-data-support-can-codegen = { workspace = true }

[features]
arbitrary = []

[lints]
workspace = true
