[package]
name = "veecle-os-data-support-can"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Support for working with CAN messages within Veecle OS"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# This crate will never involve any unsafe code.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[test]]
harness = false
name = "serialization"

[dependencies]
arbitrary = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tinyvec = { workspace = true, features = ["serde"] }
veecle-os-data-support-can-macros = { workspace = true }
veecle-os-runtime = { workspace = true }

[dev-dependencies]
hex = { workspace = true, features = ["alloc"] }
libtest-mimic = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
syn = { workspace = true, features = ["parsing"] }
test-case = { workspace = true }
veecle-os-data-support-can-codegen = { workspace = true }

[features]
arbitrary = ["dep:arbitrary", "veecle-os-data-support-can-macros/arbitrary"]

[lints]
workspace = true
