[package]
description = "Macros for `veecle-os-data-support-someip`"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "veecle-os-data-support-someip-macros"
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata]
# Miri cannot test proc-macros.
workspace-checks.miri = false

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "clone-impls",
  "derive",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
] }

[dev-dependencies]
veecle-os-data-support-someip = { workspace = true }
