[package]
name = "veecle-os-data-support-someip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Support for working with SOME/IP within Veecle OS"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# This crate will never involve any unsafe code.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
bitflags = { workspace = true }
thiserror = { workspace = true }
veecle-os-data-support-someip-macros = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["std"] }
veecle-os-runtime = { workspace = true }
veecle-os-test = { workspace = true }
yoke = { workspace = true, features = ["derive"] }

[lints]
workspace = true
