[package]
name = "veecle-os-runtime-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for `veecle-os-runtime`"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# Miri cannot test proc-macros.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "clone-impls",
  "derive",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit",
  "visit-mut",
] }

[dev-dependencies]
runtime-macros = { workspace = true }
trybuild = { workspace = true }
veecle-os-runtime = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
