[package]
name = "veecle-os-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Veecle OS Runtime"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
futures = { workspace = true, features = ["async-await"] }
generic-array = { workspace = true }
pin-cell = { workspace = true }
pin-project = { workspace = true }
typenum = { workspace = true, features = ["const-generics"] }
veecle-os-runtime-macros = { workspace = true }
veecle-telemetry = { workspace = true }
wakerset = { workspace = true }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
futures-test = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
trybuild = { workspace = true }
veecle-os-test = { workspace = true }
walkdir = { workspace = true }

[features]
default = []

[lints]
workspace = true
