[package]
name = "veecle-os-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Utilities for testing actors in Veecle OS"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
futures = { workspace = true, features = ["executor"] }
veecle-os-runtime = { workspace = true }

[dev-dependencies]
veecle-os = { workspace = true }

[lints]
workspace = true
