[package]
name = "veecle-os"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Veecle OS"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
veecle-os-data-support-can = { workspace = true, optional = true }
veecle-os-data-support-someip = { workspace = true, optional = true }
veecle-os-runtime = { workspace = true }
veecle-osal-api = { workspace = true }
veecle-osal-embassy = { workspace = true, optional = true }
veecle-osal-freertos = { workspace = true, optional = true }
veecle-osal-std = { workspace = true, optional = true }
veecle-telemetry = { workspace = true, optional = true }

[features]
alloc = ["veecle-telemetry?/alloc"]
data-support-can = ["dep:veecle-os-data-support-can"]
data-support-someip = ["dep:veecle-os-data-support-someip"]
osal-embassy = ["dep:veecle-osal-embassy"]
osal-freertos = ["dep:veecle-osal-freertos", "veecle-telemetry?/freertos"]
osal-std = ["dep:veecle-osal-std", "veecle-telemetry?/std"]
telemetry = ["dep:veecle-telemetry", "veecle-os-runtime/veecle-telemetry"]
telemetry-enable = ["telemetry", "veecle-telemetry/enable"]

[lints]
workspace = true
