[package]
name = "veecle-osal-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Veecle OS operating system abstraction layer API"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[package.metadata]
# This crate uses `#![forbid(unsafe_code)]`.
workspace-checks.miri = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
embedded-io-async = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
tokio = { workspace = true }
trybuild = { workspace = true }
veecle-os-runtime = { workspace = true }
veecle-osal-std = { workspace = true }
walkdir = { workspace = true }

[features]
# Enables test suites for TCP and UDP.
# The test suites provide ready-made tests for implementations of the traits.
test-suites = ["futures/async-await"]

[lints]
workspace = true
